# SpiderWebDB

./: CMakeLists.txt  README.md  SpiderWebDBConfig.h.in
example/: CMakeLists.txt
example/example_1/: CMakeLists.txt  main.cpp
example/example_2/: CMakeLists.txt  main.cpp
include/: SpiderWebDBConfig.h
include/core/db/: DatabaseInstance.h  DatabaseInstanceFactory.h  DatabaseInstanceProperties.h  DatabaseInstanceType.h  DatabaseManager.h  InMemoryDatabaseInstance.h  OnDiskDatabaseInstance.h
include/core/feature/: Feature.h
include/core/node/: FeaturedNode.h  Node.h
include/core/query/: Query.h  QueryParser.h
include/core/relation/: Relation.h  RelationsList.h  RelationsMap.h
include/core/utils/: CheckUtils.h  Constants.hpp  FileManipulation.h  UtilitySharedPtr.hpp
src/core/db/: DatabaseInstance.cpp  DatabaseInstanceFactory.cpp  DatabaseInstanceProperties.cpp  DatabaseManager.cpp  InMemoryDatabaseInstance.cpp  OnDiskDatabaseInstance.cpp
src/core/feature/: Feature.cpp
src/core/node/: FeaturedNode.cpp  Node.cpp
src/core/query/: Query.cpp  QueryParser.cpp
src/core/relation/: Relation.cpp  RelationsList.cpp  RelationsMap.cpp
src/core/utils/: CheckUtils.cpp  FileManipulation.cpp
test/: CMakeLists.txt
test/test_base/: databaseInstance.cc  node.cc  relation.cc  relationsList.cc  relationsMap.cc
